# rust-converter

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/bootstrap/: bootstrap.css
